<resources>
    <string name="app_name">Are We There Yet bajajraj</string>
    <string name="dummy">Dummy</string>
    <string name="provider">Provider:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="new_location">New Location</string>
    <string name="new_button">NEW</string>
    <string name="eb2250">eb2250</string>
    <string name="sparty">Sparty</string>
    <string name="home">Home</string>
    <string name="exception">Failed to communicate with geolocation services</string>
    <string name="couldnotfind">Unable to locate address</string>
    <string name="cycling">Cycling Route</string>
    <string name="walking">Walking Route</string>
    <string name="driving">Driving Route</string>
    <string name="map">Open Map</string>
</resources>