<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:foregroundGravity="center_horizontal"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textLabelProvider"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/provider"
        android:textAppearance="?android:attr/textAppearanceMedium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textProvider"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/textLabelLongitude"
        android:gravity="center_horizontal"
        android:text="@string/dummy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textLabelLatitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelProvider"
        android:gravity="right"
        android:text="@string/latitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/textLatitude"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textProvider"
        android:layout_toRightOf="@id/textLabelLongitude"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textLabelLongitude"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelLatitude"
        android:gravity="right"
        android:text="@string/longitude"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:gravity="center_horizontal"
        android:id="@+id/textLongitude"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLatitude"
        android:layout_toRightOf="@id/textLabelLongitude"
        android:text="@string/dummy" />

    <TextView
        android:id="@+id/textTo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textLabelLongitude"
        android:layout_alignParentTop="false"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/dummy"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/textDistance"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textTo"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:text="@string/dummy"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textNewLocLabel"
        android:layout_centerInParent="true"
        android:ems="10"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/textNewLocLabel"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDistance"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:text="@string/new_location" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:checkedButton="@id/walking_button"
        android:onClick="onMode">

        <RadioButton
            android:id="@+id/walking_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onMode"
            android:text="@string/walking" />


        <RadioButton
            android:id="@+id/cycling_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onMode"
            android:text="@string/cycling" />


        <RadioButton
            android:id="@+id/driving_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onMode"
            android:text="@string/driving" />
    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editLocation"
        android:layout_alignEnd="@+id/editLocation"
        android:text="@string/new_button"
        android:onClick="onNew"/>

    <Button
        android:id="@+id/buttonMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroup"
        android:onClick="openMap"
        android:text="@string/map" />



</RelativeLayout>